# kiran-screensaver

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md
data/: com.kylinsec.Kiran.ScreenSaver.service.in  com.kylinsec.Kiran.ScreenSaver.xml  com.kylinsec.Kiran.SessionDaemon.Appearance.xml  com.kylinsec.kiran.screensaver.gschema.xml  com.kylinsec.kiran.screensaver.gschema.xml.in  config.h.in  kiran-screensaver.desktop  org.mate.ScreenSaver.service.in  org.mate.ScreenSaver.xml
include/: interface.h  ks-interface.h  ks-locker-interface.h  ks-plugin-i.h  ks-plugin-interface.h  ks-screensaver-interface.h  locker-interface.h  plugin-interface.h
resources/: kiran-screensaver.qrc
src/: animation-define.h  ks-animation-define.h  ks-manager.cpp  ks-manager.h  ks-prefs.cpp  ks-prefs.h  main.cpp  manager.cpp  manager.h  prefs.cpp  prefs.h
src/fade/: fade-gamma.cpp  fade-gamma.h  fade-interface.h  fade-xrandr.cpp  fade-xrandr.h  fade.cpp  fade.h  ks-fade-gamma.cpp  ks-fade-gamma.h  ks-fade-interface.h  ks-fade-xrandr.cpp  ks-fade-xrandr.h  ks-fade.cpp  ks-fade.h
src/grab/: grab.cpp  grab.h  invisible-window.cpp  invisible-window.h  ks-grab.cpp  ks-grab.h  ks-invisible-window.cpp  ks-invisible-window.h
src/idle-watcher/: idle-watcher-factory.cpp  idle-watcher-factory.h  idle-watcher-mate.cpp  idle-watcher-mate.h  idle-watcher.h  ks-idle-watcher-factory.cpp  ks-idle-watcher-factory.h  ks-idle-watcher-mate.cpp  ks-idle-watcher-mate.h  ks-idle-watcher.h
src/listener/: ks-listener.cpp  ks-listener.h  listener.cpp  listener.h  logind-session-monitor.cpp  logind-session-monitor.h
src/locker/: ks-locker-demo.cpp  ks-locker-demo.h  ks-locker-demo.ui
src/screensaver/: classical-screensaver.cpp  classical-screensaver.h  classical-screensaver.ui  float-label.cpp  float-label.h  graphics-glow-effect.cpp  graphics-glow-effect.h  kiran-graphics-glow-effect.cpp  kiran-graphics-glow-effect.h  ks-screensaver.cpp  ks-screensaver.h  ks-screensaver.ui  screensaver-base.cpp  screensaver-base.h  screensaver-factory.cpp  screensaver-factory.h  screensaver.cpp  screensaver.h  screensaver.ui  xembed-screensaver.cpp  xembed-screensaver.h  xembed-screensaver.ui
src/tools/: xcb-utils.h  xcbutils.cpp  xcbutils.h
src/view/: ks-screen-manager.cpp  ks-screen-manager.h  ks-window.cpp  ks-window.h  screen-manager.cpp  screen-manager.h  visibility-monitor.cpp  visibility-monitor.h  window.cpp  window.h
src/widgets/: float-widget.cpp  float-widget.h
test/: CMakeLists.txt
test/fade/: CMakeLists.txt  fade-test.cpp  fade-test.h  main.cpp
tools/: CMakeLists.txt
tools/kiran-screensaver-command/: CMakeLists.txt  main.cpp
tools/kiran-screensaver-command/translations/: kiran-screensaver-command.bo_CN.ts  kiran-screensaver-command.kk_KG.ts  kiran-screensaver-command.kk_KZ.ts  kiran-screensaver-command.mn_MN.ts  kiran-screensaver-command.ug_CN.ts  kiran-screensaver-command.zh_CN.ts
translations/: kiran-screensaver.bo_CN.ts  kiran-screensaver.kk_KG.ts  kiran-screensaver.kk_KZ.ts  kiran-screensaver.mn_MN.ts  kiran-screensaver.ug_CN.ts  kiran-screensaver.zh_CN.ts
